feat(ocm): add security to openapi schema
